2003-09-12  Noah Levitt  <nlevitt@columbia.edu>

	* glib/gen-unicode-tables.pl:
	* glib/gunichartables.h:
	* glib/gunicode.h:
	* glib/guniprop.c: Add g_unichar_get_mirror_char. (#114749)

Thu Sep 11 20:11:05 2003  Owen Taylor  <otaylor@redhat.com>

	* glib/gmarkup.c: Add g_markup_printf_escaped(), 
	g_markup_vprintf_escaped().

	* tests/markup-escape-test.c (main): Test for
	g_markup_escape_text(), g_markup_printf_escaped().

2003-09-10  Noah Levitt  <nlevitt@columbia.edu>

	* glib/gunicodeprivate.h:
	* glib/gunicollate.c:
	* glib/gunidecomp.c:
	* glib/guniprop.c:
	* tests/casemap.txt:
	* tests/gen-casemap-txt.pl: Unicode 4.0 special casing. (#114681)

	* glib/gunicodeprivate.h: Use a private header instead of extern
	function declarations (_g_utf8_normalize_wc,
	_g_unichar_combining_class).

Mon Sep  8 00:31:10 2003  Stefan Westerfeld  <stefan@space.twc.de>

        * glib/gbsearcharray.h: inserted casts for C++.

2003-08-28  Matthias Clasen  <maclas@gmx.de>

	* tests/patterntest.c (verbose): Fix a C99ism.  (#120821, Thomas 
	Klausner)

2003-08-25  Tor Lillqvist  <tml@iki.fi>

	* glib/giowin32.c (read_thread): Avoid UNLOCKing the critical
	section twice, which might cause a hang. (#120653)

	* glib/giowin32.c (g_io_channel_unix_new): Warn if fd is both a
	valid file descriptor and socket.

Mon Aug 25 12:34:36 2003  Owen Taylor  <otaylor@redhat.com>

	* glib/gmessages.c: Escape control characters in g_logv() output.
	(#108287, Christian Biere)

Mon Aug 25 12:17:20 2003  Owen Taylor  <otaylor@redhat.com>

 	* glib/gmain.c (g_main_context_unref_and_unlock): 
 	When DISABLE_MEM_POOLS is set, loop through and free
 	the poll records explicitely, since g_mem_chunk_destroy()
 	won't do it. (#118121, Morten Welinder)
 
2003-08-22  Samúel Jón Gunnarsson  <sammi@techattack.nu>

	* is.po: Added "is" to ALL_LINGUAS.
	
2003-08-19  Tor Lillqvist  <tml@iki.fi>

	* glib/gmessages.c (g_logv): [Win32] Make the fatal error message